# Spawner

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Implemented.txt  README  README_old  Readme.md  Readme_old.md  Release.md  appveyor.yml  appveyor_before_build.ps1  fix.txt  q.txt  travis_build.sh  user-setup.ps1
doc/: communication-protocol.md
inc/: ParseArguments.h  SimpleGlob.h  SimpleOpt.h  arguments.h  arguments.hpp  process.h  restrictions.h  spawner.h  spawner_base.h  spawner_base.hpp  spawner_new.h  spawner_new.hpp  spawner_old.h  spawner_old.hpp  spawner_pcms2.hpp
lib-spawner/: CMakeLists.txt
lib-spawner/inc/: process.h
lib-spawner/src/: process.cpp
lib/json-cpp/: CMakeLists.txt
libspawner/: CMakeLists.txt  sp.h  sp.hpp  spawner.h
libspawner/inc/: base_runner.h  base_runner.hpp  buffer.h  buffer.hpp  compatibility.h  compatibility.hpp  delegate.h  delegate.hpp  error.h  error.hpp  hexdump.h  hexdump.hpp  linux_affinity.h  linux_procfs.h  linux_seccomp.h  logger.h  multibyte.h  multibyte.hpp  multipipe.h  mutex.h  options.h  options.hpp  pipe_broadcaster.h  pipes.h  pipes.hpp  platform.h  process.h  processproxy.h  procfs.h  report.h  report.hpp  restrictions.h  restrictions.hpp  rlimit.h  runner.h  securerunner.h  session.h  session.hpp  status.h  status.hpp  (+4 more)
libspawner/inc/posix/: linux_affinity.hpp  linux_procfd.h  linux_procfs.h  linux_procfs.hpp  linux_seccomp.h  linux_seccomp.hpp  mutex.h  mutex.hpp  platform.h  platform.hpp  platform_report.h  platform_report.hpp  rlimit.h  rlimit.hpp  runner.h  runner.hpp  securerunner.h  securerunner.hpp  signals.h  signals.hpp
libspawner/inc/win32/: exceptions.h  exceptions.hpp  mutex.h  mutex.hpp  platform.h  platform.hpp  platform_report.h  platform_report.hpp  runner.h  runner.hpp  securerunner.h  securerunner.hpp  stack_walker.hpp
libspawner/lib/: md5_cpp11.h
libspawner/src/: base_runner.cpp  compatibility.cpp  error.cpp  hexdump.cpp  logger.cpp  multibyte.cpp  multipipe.cpp  options.cpp  pipe_broadcaster.cpp  report.cpp  restrictions.cpp  session.cpp  spawner.cpp  stack_walker.cpp  uconvert.cpp
libspawner/src/md5/: md5.c
libspawner/src/posix/: buffer.cpp  delegate.cpp  linux_affinity.cpp  linux_procfd.cpp  linux_procfs.cpp  linux_seccomp.cpp  pipes.cpp  platform.cpp  procfs.cpp  report.cpp  rlimit.cpp  runner.cpp  securerunner.cpp  system_pipe.cpp
libspawner/src/win32/: buffer.cpp  compatibility.cpp  delegate.cpp  error.cpp  pipes.cpp  platform.cpp  process.cpp  processproxy.cpp  report.cpp  runner.cpp  securerunner.cpp  session.cpp  stack_walker.cpp  system_pipe.cpp  uconvert.cpp
spawner/: CMakeLists.txt
spawner/inc/: pipes.h  platform.h  process.h  processproxy.h  report.h  restrictions.h  status.h  uconvert.h
spawner/src/win32/: pipes.cpp  process.cpp  report.cpp  restrictions.cpp  uconvert.cpp
src/: ParseArguments.cpp  arguments.cpp  main.cpp  process.cpp  spawner.cpp  spawner_base.cpp  spawner_new.cpp  spawner_old.cpp  spawner_pcms2.cpp
test/: CMakeLists.txt  CMakeLists.txt.cat-template  main.pl  spawner.pm
test/cmake/: gather.cmake
test/general/: general.pm
test/general/simple/: CMakeLists.txt  main.cpp
test/memory/: CMakeLists.txt  memory.pm
test/memory/alloc/: CMakeLists.txt  main.cpp
