# Compatibility
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

GET_FILENAME_COMPONENT(PROJECT_ID ${CMAKE_CURRENT_LIST_DIR} NAME)
STRING(REPLACE " " "_" PROJECT_ID ${PROJECT_ID})
INCLUDE("../../cmake/gather.cmake")


# Project name
PROJECT (${PROJECT_ID})

LIST (APPEND CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

SET (CMAKE_BUILD_TYPE Debug)

FILE (GLOB SOURCES main.cpp)

SET (PROJECT_EXECUTABLE ${PROJECT_PREFIX}_${PROJECT_NAME})

SET(CMAKE_EXE_LINKER_FLAGS "-static")

ADD_EXECUTABLE (${PROJECT_EXECUTABLE} ${SOURCES})

ADD_COPY_STAGE(${PROJECT_EXECUTABLE})
